<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.2</version>
		<relativePath/>
	</parent>

	<properties>
		<java.version>17</java.version>
		<group.name>Diginamic promotion 2023 M03 group 3</group.name>
		<group.url>https://github.com/Diginamic-promotion-2023-M03-groupe-3</group.url>
		<!-- jjwt library for JWT token -->
		<jjwt.version>0.11.5</jjwt.version>
	</properties>

	<groupId>fr.diginamic</groupId>
	<artifactId>aqi-project-backend</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>aqi-project-backend</name>
	<description>REST API server and backend part of the AQI Project</description>
	<organization>
		<name>${group.name}</name>
		<url>${group.url}</url>
	</organization>
	<developers>
		<developer>
			<name>FHenry</name>
			<url>https://github.com/FYHenry</url>
			<organization>${group.name}</organization>
			<organizationUrl>${group.url}</organizationUrl>
		</developer>
		<developer>
			<name>HassAllali</name>
			<url>https://github.com/HassAllali</url>
			<organization>${group.name}</organization>
			<organizationUrl>${group.url}</organizationUrl>
		</developer>
		<developer>
			<name>NicolasSoulay</name>
			<url>https://github.com/NicolasSoulay</url>
			<organization>${group.name}</organization>
			<organizationUrl>${group.url}</organizationUrl>
		</developer>
		<developer>
			<name>melinasim</name>
			<url>https://github.com/melinasim</url>
			<organization>${group.name}</organization>
			<organizationUrl>${group.url}</organizationUrl>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
                    <exclusion>
                        <groupId>org.yaml</groupId>
                        <artifactId>snakeyaml</artifactId>
                    </exclusion>
      </exclusions>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
		<dependency>
		 	<groupId>org.mariadb.jdbc</groupId>
		 	<artifactId>mariadb-java-client</artifactId>
		 	<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- Intégration du starter Spring Security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- Maven dependencies for JWT token -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<!--<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency> -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
    </dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
			<version>1.9.13</version>
		</dependency>
		<dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jpa</artifactId>
            <version>3.1.0</version>
        </dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>6.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>



	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
